[project]
name = "robot-dog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gs-usb>=0.3.0",
    "libusb>=1.0.27.post4",
    "opencv-python>=4.12.0.88",
    "piper-sdk>=0.6.1",
    "pyaudio>=0.2.14",
    "pymodbus>=3.8.6",
    "pyrealsense2>=2.56.5.9235",
    "pyserial>=3.5",
    "python-can>=4.5.0",
    "requests>=2.32.5",
]


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
